fixed typo on size of san francisco apt

--- a/components/sass/_mixins.scss
+++ b/components/sass/_mixins.scss
@@ -28,3 +28,9 @@
     clear: both;
   } //after
 } //clearfix
+
+@mixin center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+} //center-block
