--- a/components/sass/modules/_footer.scss
+++ b/components/sass/modules/_footer.scss
@@ -2,6 +2,18 @@ footer {
   @include container(100%);
   background: lighten($dark, 20);
   padding: 30px 0;
+  p {
+    color: $light;
+    text-align: center;
+  }
+  #addressandtel {
+    color: $light;
+    p { 
+      text-align: left;
+      float: left; 
+    }
+    ul { float: right; }
+  }  
   #socialmedia {
     text-align: center;
     ul {
