--- a/components/sass/modules/_welcome.scss
+++ b/components/sass/modules/_welcome.scss
@@ -1,5 +1,5 @@
 #welcome {
-  @include background-image(linear-gradient(top, $yellow, $orange));
+  @include background-image(linear-gradient(top, $light, $light));
 
   article {
     text-align: center;
@@ -13,7 +13,7 @@
   h1 {
     font-weight: normal;
     line-height: 100%;
-    color: darken($orange, 20);
+    color: darken($green, 0);
     padding: 10px 0;
   } //h1
 
