--- a/components/sass/modules/_intro.scss
+++ b/components/sass/modules/_intro.scss
@@ -6,6 +6,53 @@ header {
     @include align-items(center);
     @include justify-content(center);
 
+    .ribbon-wrapper-green {
+      width: 170px;
+      height: 176px;
+      overflow: hidden;
+      position: absolute;
+      top: -3px;
+      right: -3px;
+    }
+
+    .ribbon-green {
+      font: 300 15px Helvetica;
+      color: #333;
+      text-align: center;
+      -webkit-transform: rotate(45deg);
+      -moz-transform:    rotate(45deg);
+      -ms-transform:     rotate(45deg);
+      -o-transform:      rotate(45deg);
+      position: relative;
+      padding: 7px 0;
+      left: 25px;
+      top: 27px;
+      width: 185px;
+      background-color: #BFDC7A;
+      @include background-image(linear-gradient(top, lighten($navBackground, 10), $navBackground));
+      color: $light;
+      -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+      -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
+      box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
+
+      &:before, &:after {
+        content: "";
+        border-top:   3px solid #6e8900;   
+        border-left:  3px solid transparent;
+        border-right: 3px solid transparent;
+        position:absolute;
+        bottom: -3px;
+      }
+
+      &:before {
+        left: 0;
+      }
+
+      &:after {
+        right: 0;
+      }
+    }
+
     .hgroup {
       padding: 100px 0;
 
